Edit listenning port for deployment template

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nextjs-app
+  name: weather-nodejs-app
 spec:
   replicas: 1
   selector:
@@ -24,7 +24,7 @@ spec:
         ports:
         - name: http
           protocol: TCP
-          containerPort: 3000
+          containerPort: 8080
         env:
         - name: INGRESS_HOST
         - name: PROTOCOLS
@@ -34,7 +34,7 @@ spec:
         livenessProbe:
           failureThreshold: 3
           httpGet:
-            port: 3000
+            port: 8080
             path: /
             scheme: HTTP
           periodSeconds: 10
