--- a/tekton/base/nodejs.Pipeline.yaml
+++ b/tekton/base/nodejs.Pipeline.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: nodejs
+  name: weather-nodejs-app
 spec:
   params:
     - description: Application name
