--- a/tekton/base/git-credentials.Secret.yaml
+++ b/tekton/base/git-credentials.Secret.yaml
@@ -2,8 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: git-credentials
-data:
-  password: Z2hwX2tGdm80WEVsTG5qYWY0c2hRZUs4SXFUeWFZNkxoajNCZGw3eQ==
-  username: ZGF2aWRiaWVkZXI=
-
-
+stringData:
+  password: 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
+  username: chrisley75
