--- a/tekton/base/git-credentials.Secret.yaml
+++ b/tekton/base/git-credentials.Secret.yaml
@@ -1,7 +1,12 @@
+
+#Encode in base64 to put in Data field
+#$ echo -n "<VAR>" | base64
+
+
 apiVersion: v1
 kind: Secret
 metadata:
   name: git-credentials
-stringData:
-  password: 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
-  username: chrisley75
+data:
+  password: Z2hwX09PbFhUMVN5UTFVOTVjS2J6WUszVkxZV2poSkpkZTJyaUtocw==
+  username: Y2hyaXNsZXk3NQ==
